--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "night-vision": "^0.3.3",
     "vue": "^3.2.13"
   },
   "devDependencies": {
