--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "night-vision": "^0.3.3",
+    "@debut/indicators": "^1.3.19",
+    "indicatorts": "^1.0.14",
     "vue": "^3.2.13"
   },
   "devDependencies": {
