--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@debut/indicators": "^1.3.19",
     "@vueform/multiselect": "^2.6.2",
     "night-vision": "^0.3.3",
+    "single-spa-vue": "^3.0.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
